<resources>
    <string name="app_name">MiPrimeraAPP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="logo_mystic_mornings">Logo Mystic Mornings</string>
    <string name="digitar_usuario">Digite su usuario</string>
    <string name="digitar_contrasena">Digite su contraseña</string>
    <string name="user_name">Usuario</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="label_password">Contraseña</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_listado_productos">listadoProductos</string>
    <string name="title_activity_carrito_compras">CarritoCompras</string>
    <string name="title_activity_ssaax">ssaax</string>
</resources>