<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/logo_mystic_mornings"
        android:src="@mipmap/logo_mystic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="username"
        android:text="@string/label_password"
        android:textColor="#673AB7"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailAddress" />

    <TextView
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="username"
        android:text="@string/user_name"
        android:textColor="#673AB7"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/digitar_contrasena"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasword" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#AFABC4"
        android:text="@string/iniciar_sesion"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        app:layout_constraintVertical_bias="0.169" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="347dp"
        android:layout_height="48dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/digitar_usuario"
        android:inputType="textEmailAddress"
        android:labelFor="@id/usuario"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

</androidx.constraintlayout.widget.ConstraintLayout>